Update styling for mobile support. Here are details: - Input.RANGE:     - Remove the width styling at 1100px breakpoint - "Add All Results to Cart" table header icon:     - Set title attributes to the button tag that wraps the cart icon       (i tag). This will make sure default tooltip is properly displayed       on PC, and mobile device touch start will trigger the button click       event handler instead of the icon touchstart event handler

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -293,14 +293,6 @@ to 100%, this will make the shrinking look smoother */
     }
 }
 
-/* Make sure input tags shrink more when screen get narrower before qtype groups
-are wrapped into a different line */
-@media (max-width: 1100px) {
-    input.RANGE {
-        width: 20% !important;
-    }
-}
-
 @media (max-width: 860px) {
     /* Make search menu shrink proportionally when screen width is narrower */
     .sidebar-area {
